{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 32,
  "lineage": "ab0457a6-14d8-21d1-6845-c90436016cfc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:569813798269:internet-gateway/igw-0eaec9a61f5817c10",
            "id": "igw-0eaec9a61f5817c10",
            "owner_id": "569813798269",
            "tags": {
              "Name": "grayfox-dev-igw"
            },
            "tags_all": {
              "Name": "grayfox-dev-igw"
            },
            "vpc_id": "vpc-07f5310fc67d4ec35"
          },
          "dependencies": [
            "aws_vpc.grayfox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:569813798269:route-table/rtb-0813730f075d4993d",
            "id": "rtb-0813730f075d4993d",
            "owner_id": "569813798269",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eaec9a61f5817c10",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "grayfox-dev-public-rt"
            },
            "tags_all": {
              "Name": "grayfox-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f5310fc67d4ec35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.grayfox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0552a5bda29240f79",
            "route_table_id": "rtb-0813730f075d4993d",
            "subnet_id": "subnet-011df54a6dc895dcb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.grayfox_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098eee30d5f84d484",
            "route_table_id": "rtb-0813730f075d4993d",
            "subnet_id": "subnet-0dc59b730d245edda"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.grayfox_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d3773121c097aca",
            "route_table_id": "rtb-0813730f075d4993d",
            "subnet_id": "subnet-0c4fb7c78856d8877"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.grayfox_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:569813798269:security-group/sg-0fd808a01586db11b",
            "description": "Security group for Lambda function",
            "egress": [],
            "id": "sg-0fd808a01586db11b",
            "ingress": [],
            "name": "grayfox-dev-lambda-sg",
            "name_prefix": "",
            "owner_id": "569813798269",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07f5310fc67d4ec35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.grayfox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:569813798269:subnet/subnet-011df54a6dc895dcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011df54a6dc895dcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569813798269",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "grayfox-dev-public-subnet-1"
            },
            "tags_all": {
              "Name": "grayfox-dev-public-subnet-1"
            },
            "vpc_id": "vpc-07f5310fc67d4ec35"
          },
          "dependencies": [
            "aws_vpc.grayfox_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:569813798269:subnet/subnet-0dc59b730d245edda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc59b730d245edda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569813798269",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "grayfox-dev-public-subnet-2"
            },
            "tags_all": {
              "Name": "grayfox-dev-public-subnet-2"
            },
            "vpc_id": "vpc-07f5310fc67d4ec35"
          },
          "dependencies": [
            "aws_vpc.grayfox_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:569813798269:subnet/subnet-0c4fb7c78856d8877",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4fb7c78856d8877",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569813798269",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "grayfox-dev-public-subnet-3"
            },
            "tags_all": {
              "Name": "grayfox-dev-public-subnet-3"
            },
            "vpc_id": "vpc-07f5310fc67d4ec35"
          },
          "dependencies": [
            "aws_vpc.grayfox_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "grayfox_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:569813798269:vpc/vpc-07f5310fc67d4ec35",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0434690f105dd57ad",
            "default_route_table_id": "rtb-07517e4786dbae75e",
            "default_security_group_id": "sg-0f30f7ce7e5f604c9",
            "dhcp_options_id": "dopt-099f5d525ae7c5e83",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f5310fc67d4ec35",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07517e4786dbae75e",
            "owner_id": "569813798269",
            "tags": {
              "Name": "grayfox-dev-vpc"
            },
            "tags_all": {
              "Name": "grayfox-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}